--- a/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -1,111 +1,97 @@
 <section class="container criar-pensamentos ff-inter">
   <header class="header">
-    <h2>
-      Adicione um <br />
-      pensamento novo:
-    </h2>
+    <h2>Adicione um <br>pensamento novo:</h2>
   </header>
-  <form action="">
+  <form [formGroup]="formulario">
     <label for="pensamento">Pensamento</label>
     <input
       type="textarea"
       class="input"
       id="pensamento"
-      name="pensamento"
+      formControlName="conteudo"
       placeholder="Digite o pensamento"
-      [(ngModel)]="pensamento.conteudo"
-    />
 
+    >
     <label for="autoria">Autoria ou fonte</label>
     <input
-      type="textarea"
+      type="text"
       class="input"
-      id="pensamento"
-      name="pensamento"
+      id="autoria"
+      formControlName="autoria"
       placeholder="Digite a autoria ou fonte"
-      [(ngModel)]="pensamento.autoria"
-    />
 
-    <label for="modelo"> Selecione o modelo do card:</label>
+    >
+    <label for="modelo">Selecione o modelo do card:</label>
     <div class="container-radio">
-      <!-- Modelo 1 -->
       <div class="radio-modelo">
         <label for="modelo1">
-          <input type="radio" id="modelo1" value="modelo1" name="modelo-card" [(ngModel)]="pensamento.modelo"/>
+          <input
+            type="radio"
+            id="modelo1"
+            value="modelo1"
+            formControlName="modelo"
+
+          >
           <div class="custom-radio">
             <span></span>
           </div>
-          <span></span>
+          <span>Modelo 1</span>
         </label>
-
         Prévia:
         <div class="modelo modelo1 ff-roboto-mono">
-          <img src="../../../../assets/imagens/modelo1.png" alt="Aspas azuis" />
-          <p class="conteudo">
-            {{ pensamento.conteudo }}
-          </p>
-          <p class="autoria">
-            <b>{{ pensamento.autoria }}</b>
-          </p>
+          <img src="../../../../assets/imagens/modelo1.png" alt="Aspas azuis">
+          <p class="conteudo">{{ formulario.get('conteudo')?.value }}</p>
+          <p class="autoria"><b>{{ formulario.get('modelo')?.value }}</b></p>
         </div>
       </div>
 
-      <!-- Modelo 2 -->
       <div class="radio-modelo">
         <label for="modelo2">
-          <input type="radio" id="modelo2" value="modelo2" name="modelo-card" [(ngModel)]="pensamento.modelo"/>
+          <input
+            type="radio"
+            id="modelo2"
+            value="modelo2"
+            formControlName="modelo-card"
+
+          >
           <div class="custom-radio">
             <span></span>
           </div>
           <span>Modelo 2</span>
         </label>
-
         Prévia:
         <div class="modelo modelo2 ff-roboto-mono">
-          <img
-            src="../../../../assets/imagens/modelo2.png"
-            alt="Aspas azuis claro"
-          />
-          <p class="conteudo">
-            {{ pensamento.conteudo }}
-          </p>
-          <p class="autoria">
-            <b>{{ pensamento.autoria }}</b>
-          </p>
+          <img src="../../../../assets/imagens/modelo2.png" alt="Aspas azul claro">
+          <p class="conteudo">{{ formulario.get('conteudo')?.value }}</p>
+          <p class="autoria"><b>{{ formulario.get('autoria')?.value }}</b></p>
         </div>
       </div>
 
-      <!-- Modelo 3 -->
       <div class="radio-modelo">
         <label for="modelo3">
-          <input type="radio" id="modelo3" value="modelo3" name="modelo-card" [(ngModel)]="pensamento.modelo"/>
+          <input
+            type="radio"
+            id="modelo3"
+            value="modelo3"
+            formControlName="modelo-card"
+
+          >
           <div class="custom-radio">
             <span></span>
           </div>
           <span>Modelo 3</span>
         </label>
-
         Prévia:
         <div class="modelo modelo3 ff-roboto-mono">
-          <img
-            src="../../../../assets/imagens/modelo3.png"
-            alt="Aspas verdes"
-          />
-          <p class="conteudo">
-            {{ pensamento.conteudo }}
-          </p>
-          <p class="autoria">
-            <b>{{ pensamento.autoria }}</b>
-          </p>
+          <img src="../../../../assets/imagens/modelo3.png" alt="Aspas verdes">
+          <p class="conteudo">{{ pensamento.conteudo }}</p>
+          <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
         </div>
       </div>
     </div>
-
-    <!-- Botao -->
     <div class="acoes">
-      <button class="botao" (click)="criarPensamento()">Salvar</button>
-
-           <button class="botao" routerLink="/listarPensamento">Cancelar</button>
+      <button (click)="criarPensamento()" class="botao">Salvar</button>
+      <button (click)="cancelar()" class="botao">Cancelar</button>
     </div>
   </form>
 </section>
